@@ -22,9 +22,9 @@ application/mime-type-test
 application/msword
 	_description=Microsoft Word document
 	default_action_type=application
-	short_list_application_ids_for_novice_user_level=staroffice,applix,abiword
-	short_list_application_ids_for_intermediate_user_level=staroffice,applix,abiword
-	short_list_application_ids_for_advanced_user_level=staroffice,applix,abiword
+	short_list_application_ids_for_novice_user_level=abiword,staroffice,applix
+	short_list_application_ids_for_intermediate_user_level=abiword,staroffice,applix
+	short_list_application_ids_for_advanced_user_level=abiword,staroffice,applix
 
 application/octet-stream
 	can_be_executable=TRUE
